--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3.8'
 
 services:
+  redis:
+    image: redis:alpine
+    container_name: todo_redis
+    networks:
+      - backend
+    restart: unless-stopped
   database:
     image: postgres:14-alpine
     container_name: todo_db
@@ -39,7 +45,7 @@ services:
       dockerfile: Dockerfile
     container_name: todo_frontend
     networks:
-      - frontend
+       - frontend
     restart: unless-stopped
 
   nginx:
