--- a/api/package.json
+++ b/api/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "nodemon": "^3.0.0"
   }
 }
+
