--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
-version: '3.8'
-
 services:
+  # Redis cache (Harjutus 1)
   redis:
     image: redis:alpine
     container_name: todo_redis
     networks:
       - backend
     restart: unless-stopped
+
+  # PostgreSQL andmebaas
   database:
     image: postgres:14-alpine
     container_name: todo_db
@@ -20,34 +21,42 @@ services:
     networks:
       - backend
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U todouser -d tododb"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 10s
       timeout: 5s
       retries: 5
     restart: unless-stopped
 
+  # Node.js API (dev mode - Harjutus 3)
   api:
     build:
       context: ./api
       dockerfile: Dockerfile
-    container_name: todo_api
     depends_on:
       database:
         condition: service_healthy
+      redis:
+        condition: service_started
     networks:
       - backend
       - frontend
+    volumes:
+      - ./api:/app
+      - /app/node_modules
+    command: npm run dev
     restart: unless-stopped
 
+  # React Frontend
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: todo_frontend
     networks:
-       - frontend
+      - frontend
     restart: unless-stopped
 
+  # Nginx Reverse Proxy
   nginx:
     image: nginx:alpine
     container_name: todo_nginx
